--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     "@vercel/speed-insights": "^1.0.4",
     "accept-language": "^3.0.18",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "gsap": "^3.12.4",
-    "i18next": "^23.7.11",
+    "eslint-config-next": "^14.1.0",
+    "gsap": "^3.12.5",
+    "i18next": "^23.8.0",
     "i18next-resources-to-backend": "^1.2.0",
-    "next": "^14.0.4",
+    "next": "^14.1.0",
     "next-i18next": "^15.1.1",
     "next-plausible": "^3.12.0",
     "next-translate": "^2.6.2",
-    "react": "^18.2.0",
-    "react-cookie": "^6.1.1",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.0-canary-763612647-20240126",
+    "react-cookie": "^7.0.2",
+    "react-dom": "^18.3.0-canary-763612647-20240126",
     "react-helmet": "^6.1.0",
-    "react-i18next": "^14.0.0",
+    "react-i18next": "^14.0.1",
     "react-ssr-prepass": "^1.5.0",
     "react-syntax-highlighter": "^15.5.0",
-    "sass": "^1.69.7",
-    "ts-jest": "^29.1.1",
+    "sass": "^1.70.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
