--- a/package.json
+++ b/package.json
@@ -13,51 +13,50 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "format": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "format:fix": "prettier --write .",
+    "prettier": "prettier"
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.10",
     "accept-language": "^3.0.18",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.4",
     "gsap": "^3.12.5",
-    "i18next": "^23.8.2",
+    "i18next": "^23.10.1",
     "i18next-resources-to-backend": "^1.2.0",
-    "next": "^14.1.0",
+    "next": "^14.1.4",
     "next-i18next": "^15.2.0",
     "next-plausible": "^3.12.0",
     "next-translate": "^2.6.2",
-    "react": "^18.0.0-rc.3",
-    "react-cookie": "^7.0.2",
-    "react-dom": "^18.0.0-rc.3",
+    "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-i18next": "^14.0.5",
+    "react-i18next": "^14.1.0",
     "react-ssr-prepass": "^1.5.0",
     "react-syntax-highlighter": "^15.5.0",
-    "sass": "^1.70.0",
+    "sass": "^1.72.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.18",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.12.2",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
     "@types/react-helmet": "^6.1.11",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "@wixc3/react-board": "^2.4.0",
+    "@wixc3/react-board": "^2.4.1",
     "env-cmd": "^10.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-only-warn": "^1.1.0",
     "husky": "^9.0.11",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.2.5",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.22.3",
     "ts-node": "^10.9.2"
   },
   "license": "MIT",
