--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "@wixc3/react-board": "^2.4.1",
     "env-cmd": "^10.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-only-warn": "^1.1.0",
     "husky": "^9.0.11",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
